# EPUB-Translator

./: .gitignore  .translation_cache.json  EPUB-Translator.spec  LICENSE  README.md  gui_launcher.py  index.html  launcher.py  minimal.epub  package-lock.json  package.json  pyproject.toml  requirements.txt  start.bat  test.py  vite.config.ts
dist-electron/: main.js  preload.mjs
electron/: main.ts
epub_python_translator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
epub_translator/: __init__.py  cache.py  cli.py  config.py  epub.py  gui.py  html_translate.py  providers.py  settings.py  web_server.py
epub_translator/web/: app.js  index.html  style.css
src/: App.css  App.tsx  index.css
src/utils/: epub.ts  translator.ts
tests/: test_epub_core.py
