[project]
name = "epub-python-translator"
version = "0.1.0"
description = "A compact Python EPUB translator with CLI and Tkinter GUI."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "beautifulsoup4>=4.12.0",
  "lxml>=4.9.0",
  "fastapi>=0.110.0",
  "uvicorn>=0.29.0",
  "httpx>=0.27.0",
  "python-multipart>=0.0.9",
  "websockets>=12.0"
]

[project.scripts]
epub-translator = "epub_translator.cli:main"
epub-translator-gui = "epub_translator.web_server:main"

[tool.setuptools.packages.find]
include = ["epub_translator*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
